--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         letter-spacing: .15em;
         display: inline-block;
         font-weight: 600;
+        font-size: 1.2rem;
     }
     @keyframes typing {
         from { width: 0 }
@@ -42,6 +43,17 @@
         70% { box-shadow: 0 0 0 10px rgba(99, 102, 241, 0); }
         100% { box-shadow: 0 0 0 0 rgba(99, 102, 241, 0); }
     }
+
+    @media (min-width: 640px) {  /* Small screens */
+        .typewriter { font-size: 1.5rem; }
+    }
+    @media (min-width: 768px) {  /* Medium screens */
+        .typewriter { font-size: 1.8rem; }
+    }
+    @media (min-width: 1024px) {  /* Large screens */
+        .typewriter { font-size: 2.2rem; }
+    }
+
     .blink {
         border-right: 2px solid #060707;
         animation: blink-caret 0.75s step-end infinite;
@@ -341,7 +353,7 @@
                             </div>
                             <div>
                                 <p class="text-gray-500 text-sm">Office</p>
-                                <p class="font-medium">Laboratory of Computational Social Systems, Yardi School of AI</p>
+                                <p class="font-medium">LLCS2, Yardi School of AI, IIT Delhi</p>
                             </div>
                         </div>
                      
