--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                     <h2 class="text-3xl font-bold mb-6">About Me</h2>
                     <p class="text-gray-600 mb-6 text-lg">
                         I am a final-year undergraduate student in Computer Science at Vellore Institute of Technology, specializing in 
-                        representation learning, particularly on geometric deep learning, out-of-distribution (OOD) generalization, State Space Models(SSMs) and Riemannian Machine Learning. I 
-                        also have a keen interest in agent based systems and reinforcement learning. Currently I am a Junior Research Fellow(JRF)
+                        representation learning, particularly on Geometric Deep Learning, Out-Of-distribution(OOD) generalization and Riemannian Machine Learning. I 
+                        also have a keen interest in State Space Models and Agent based Systems. Currently I am a Junior Research Fellow(JRF)
                         at LCS2, IIT Delhi under Dr.Tanmoy Chakraborty.
                     </p>
     
