--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <div class="space-y-4">
                         <div class="bg-indigo-50 p-4 rounded-lg shadow-sm pulse">
                             <h3 class="text-lg font-semibold text-blue-700">Paper Accepted</h3>
-                            <p class="text-sm text-gray-600">My paper "LGIN: An Approximate solution to the Discriminative Bottleneck in Hyperbolic GNNs" has been accepted at GRADES NDA@ACM SIGMOD/PODS Conference</p>
+                            <p class="text-sm text-gray-600">My paper "LGIN: Defining an Approximately Powerful Hyperbolic GNN" has been accepted at GRADES NDA@ACM SIGMOD</p>
                             <p class="text-xs text-gray-500 mt-1">May, 2025</p>
                         </div>
 
@@ -190,11 +190,6 @@
                             <p class="text-xs text-gray-500 mt-1">May, 2025</p>
                         </div>
     
-                        <div class="bg-gray-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-lg font-semibold text-gray-700">Paper Release</h3>
-                            <p class="text-sm text-gray-600">My paper on Lorentzian Graph Isomorphic Network is out on Arxiv.</p>
-                            <p class="text-gray-500 text-xs mt-1">April, 2025</p>
-                        </div>
                         <div class="bg-gray-50 p-4 rounded-lg shadow-sm">
                             <h3 class="text-lg font-semibold text-gray-700">Paper Release</h3>
                             <p class="text-gray-600 text-sm">My paper on Joint Predictive and Bayesian Inference based Graph Self Supervised Learning is out on Arxiv.</p>
@@ -216,9 +211,9 @@
                 <div class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition">
                     <div class="flex flex-col md:flex-row md:items-center">
                         <div class="md:w-3/4">
-                            <h3 class="text-xl font-semibold mb-1">Lorentzian Graph Isomorphic Network </h3>
+                            <h3 class="text-xl font-semibold mb-1">LGIN: Defining an Approximately Powerful Hyperbolic GNN </h3>
                             <p class="text-gray-600 mb-2">
-                                Srinitish Srinivasan, Omkumar CU. <span class="font-medium">Preprint</span>
+                                Srinitish Srinivasan, Omkumar CU. <span class="font-medium">GRADES NDA Workshop@ACM SIGMOD</span>
                             </p>
                             <p class="text-gray-500">
                                 Hyperbolic GNNs may not be as powerful as Euclidean GNNs in terms of discriminative power 
