--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     
                     <div class="flex flex-wrap gap-4 mt-8">
                         <div class="bg-gray-100 px-4 py-2 rounded-full flex items-center">
-                            <i class="fas fa-brain text-blue-500 mr-2"></i>
+                            <i class="fas fa-project-diagram text-blue-500 mr-2"></i>
                             <span>Geometric Deep Learning</span>
                         </div>
                         <div class="bg-gray-100 px-4 py-2 rounded-full flex items-center">
@@ -169,7 +169,7 @@
                             <span>OOD Generalization</span>
                         </div>
                         <div class="bg-gray-100 px-4 py-2 rounded-full flex items-center">
-                            <i class="fas fa-project-diagram text-blue-500 mr-2"></i>
+                            <i class="fas fa-infinity text-blue-500 mr-2"></i>
                             <span>Riemannian Machine Learning</span>
                         </div>
                     </div>
