--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                     <div class="space-y-4">
                         <div class="bg-indigo-50 p-4 rounded-lg shadow-sm pulse">
                             <h3 class="text-lg font-semibold text-blue-700">Paper Accepted</h3>
-                            <p class="text-sm text-gray-600">My paper "LGIN: Defining an Approximately Powerful Hyperbolic GNN" has been accepted at GRADES NDA@ACM SIGMOD</p>
+                            <p class="text-sm text-gray-600">My paper Lorentzian Graph Isomorphic Network has been accepted at ACM SIGMOD 2025 GRADES NDA Workshop</p>
                             <p class="text-xs text-gray-500 mt-1">May, 2025</p>
                         </div>
 
@@ -218,9 +218,9 @@
                 <div class="bg-white p-6 rounded-xl shadow-sm hover:shadow-md transition">
                     <div class="flex flex-col md:flex-row md:items-center">
                         <div class="md:w-3/4">
-                            <h3 class="text-xl font-semibold mb-1">LGIN: Defining an Approximately Powerful Hyperbolic GNN </h3>
+                            <h3 class="text-xl font-semibold mb-1">Lorentzian Graph Isomorphic Network</h3>
                             <p class="text-gray-600 mb-2">
-                                Srinitish Srinivasan, Omkumar CU. <span class="font-medium">GRADES NDA Workshop@ACM SIGMOD</span>
+                                Srinitish Srinivasan, Omkumar CU. <span class="font-medium">ACM SIGMOD 2025 GRADES NDA Workshop</span>
                             </p>
                             <p class="text-gray-500">
                                 Hyperbolic GNNs may not be as powerful as Euclidean GNNs in terms of discriminative power 
