--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                     <div class="space-y-4">
                         <div class="bg-indigo-50 p-4 rounded-lg shadow-sm pulse">
                             <h3 class="text-lg font-semibold text-blue-700">Grant Awarded</h3>
-                            <p class="text-sm text-gray-600">Recieved a travel grant of USD 1500 from GRADES NDA of ACM SIGMOD/PODS to present my paper Lorentzian Graph Isomorphic Network</p>
+                            <p class="text-sm text-gray-600">Received a travel grant of USD 1500 from GRADES NDA, ACM SIGMOD/PODS to present my paper Lorentzian Graph Isomorphic Network</p>
                             <p class="text-xs text-gray-500 mt-1">June, 2025</p>
                         </div>
-                        <div class="bg-indigo-50 p-4 rounded-lg shadow-sm">
-                            <h3 class="text-lg font-semibold text-blue-700">Paper Accepted</h3>
+                        <div class="bg-gray-50 p-4 rounded-lg shadow-sm">
+                            <h3 class="text-lg font-semibold text-gray-700">Paper Accepted</h3>
                             <p class="text-sm text-gray-600">My paper Lorentzian Graph Isomorphic Network has been accepted at ACM SIGMOD 2025 GRADES NDA Workshop</p>
                             <p class="text-xs text-gray-500 mt-1">May, 2025</p>
                         </div>
